# qserve

./: Cargo.toml  README.md
.github/workflows/: rust.yml
public/: index.html
public/css/: style.css
src/: arguments.rs  config.rs  log.rs  main.rs  response.rs
src/handlers/: files.rs  home.rs  mod.rs  static_file.rs
src/operations/: decoder.rs  file.rs  html.rs  mod.rs
