[package]
name = "qserve"
description = "Quickly serve your files on your network with speed and simplicity."
repository = "https://github.com/shamxl/qserve"
version = "0.2.1"
edition = "2021"
authors = ["shamxl <shamxl@pm.me>"]
keywords = ["serve", "serve-files", "qserve", "file-sharing", "file-serving"]
license = "MIT"
include = ["**/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
